<resources>
    <string name="app_name">NanoHealthSuite</string>
    <string name="main_activity">MainActivity</string>
    <string name="detail_activity">ProductDetail</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_bg">Login Background Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="need_help">NEED HELP?</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_login">Nano Health Suite</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="product_image">Product Image</string>
    <string name="ok">Ok</string>
    <string name="order_now">Order Now</string>
</resources>