<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.assessment.nanohealthsuite.ui.activity.login.LoginViewModel" />

        <variable
            name="handler"
            type="com.assessment.nanohealthsuite.interfaces.ILogInHandler" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:background="@drawable/bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_bg"
                android:layout_centerInParent="true"
                android:src="@drawable/app_icon"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/sf_pro_text_bold"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />



        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernmae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconDrawable="@drawable/icon_email_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(text) -> viewModel.onTextChangeUsername(text)}"
                    android:drawablePadding="-10dp"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:inputType="text"
                    android:maxLength="30"
                    android:text="@={viewModel.username}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                app:boxBackgroundColor="@android:color/transparent"
                app:endIconDrawable="@drawable/icon_password_field"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(text) -> viewModel.onTextChangePassword(text)}"
                    android:drawablePadding="-10dp"
                    android:fontFamily="@font/sf_pro_text_medium"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="25dp"
                android:background="@drawable/round_corner_button"
                android:fontFamily="@font/sf_pro_text_bold"
                android:onClick="@{()->handler.onLogInClicked()}"
                android:padding="15dp"
                android:text="@string/continue_text"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@string/need_help"
                android:textColor="@color/dark_grey_color"
                android:textSize="18sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>